# mertalizer

./: .gitignore  Cargo.toml  README.md  demo.sh  example.sh  requirements.txt  run_server.sh  setup.sh  start_server.sh  test.sh
configs/: debug.yaml  mert_95m.yaml  w2v_baseline.yaml
ml/evaluation/: metrics.py
ml/export/: onnx.py  torchscript.py
ml/inference/: cli.py  extract_embeddings.py
ml/training/: train.py
rust/: Cargo.toml
rust/web/: history.rs  main.rs  predictor.rs
scripts/: demo.sh  example.sh  run_server.sh  setup.sh  test.sh
src/: history.rs  main.rs  predictor.rs
src/data/: fetch_datasets.py  ingestion.py  ontology.py  preprocessing.py
src/inference/: api.py  cli.py  history.py
src/modeling/: ssm_novelty.py  system.py
templates/: index.html
web_dashboard/templates/: index.html
