[package]
name = "mertalizer-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Audio processing
cpal = "0.15"
hound = "3.5"
rubato = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# MIME helpers
mime_guess = "2.0"

# Async utilities
tokio-util = "0.7"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# File handling
tempfile = "3.8"
walkdir = "2.4"

[[bin]]
name = "web_server"
path = "web/main.rs"
